--- a/update-password-event-listener/pom.xml
+++ b/update-password-event-listener/pom.xml
@@ -2,14 +2,14 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.adelhub.kc</groupId>
-  <artifactId>welcome-mail-listener</artifactId>
+  <groupId>com.beckman.kc</groupId>
+  <artifactId>update-password-event-listener</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>welcome-mail-listener</name>
+  <name>update-password-event-listener</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <keycloak.version>25.0.2</keycloak.version>
+    <keycloak.version>26.0.7</keycloak.version>
   </properties>
 
   <dependencies>
@@ -57,7 +57,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.4</version>
+            <version>3.4.1</version>
             <executions>
                 <execution>
                     <phase>package</phase>
@@ -72,7 +72,5 @@
         </plugin>
     </plugins>
 </build>
-
-
 
 </project>
