--- a/update-password-event-listener/pom.xml
+++ b/update-password-event-listener/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.beckman.kc</groupId>
   <artifactId>update-password-event-listener</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>update-password-event-listener</name>
   <url>http://maven.apache.org</url>
   <properties>
