--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,17 @@ services:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
       POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
   keycloak:
-    image: quay.io/keycloak/keycloak:26.0.7
+    #image: becls-keycloak:26.0.6
+    image: quay.io/keycloak/keycloak:26.0.6
+    command: ["start","--features=declarative-ui", "--spi-user-provider=jpa-encrypted"]
     volumes: # Add this
-      - ./update-password-event-listener/target/update-password-event-listener-1.0-SNAPSHOT.jar:/opt/keycloak/providers/update-password-event-listener.jar
+      - ./update-password-event-listener/target/update-password-event-listener-1.0.jar:/opt/keycloak/providers/update-password-event-listener.jar
+      - ./pii-data-encryption-provider/target/pii-data-encryption-1.0.jar:/opt/keycloak/providers/pii-data-encryption.jar
     environment:
       KC_DB: postgres
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
@@ -24,8 +29,5 @@ services:
       - postgres
     ports:
       - "8080:8080"
-    command:
-      - start-dev
-
 volumes:
   postgres_data_dev:
